Fix for BMT-164.